--- a/OnlineResultCheckPortal/Views/Result/Index.cshtml
+++ b/OnlineResultCheckPortal/Views/Result/Index.cshtml
@@ -50,7 +50,7 @@
                     </div>
                 </form>
 
-                <div class="container">
+                <div class="">
                     <div class="row">
 
 
@@ -66,9 +66,9 @@
                             <table id="UserDetailsTable" class="table table-bordered" style="border-bottom: 1px solid #D5D5D5;">
                                 <thead>
                                     <tr>
-                                        <th style="text-transform:none;border: 1px solid #D5D5D5;">#</th>
+                                        @*<th style="text-transform:none;border: 1px solid #D5D5D5;">#</th>
                                         <th style="text-transform:none;border: 1px solid #D5D5D5;">Registration No</th>
-                                        <th style="text-transform:none;border: 1px solid #D5D5D5;">Student Name</th>
+                                        <th style="text-transform:none;border: 1px solid #D5D5D5;">Student Name</th>*@
                                         <th style="text-transform:none;border: 1px solid #D5D5D5;">Subject Name</th>
                                         <th style="text-transform:none;border: 1px solid #D5D5D5;">Grade</th>
                                         <th style="text-transform:none;border: 1px solid #D5D5D5;">Remarks</th>
