--- a/OnlineResultCheckPortal/Views/Home/Index.cshtml
+++ b/OnlineResultCheckPortal/Views/Home/Index.cshtml
@@ -55,7 +55,7 @@
                     <a href="#">
                         <i class="fa fa-thumbs-up fa-4x light-gray"></i>
                         <h3>Save the stress</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+                        <p>Your school examination results are ready and you can access them online. No running back to school, no queuing, and no travelling. It saves you the stress!</p>
                     </a>
                 </div>
                 <!--Seciton 2-->
@@ -63,15 +63,15 @@
                     <a href="#">
                         <i class="fa fa-download fa-4x light-gray"></i>
                         <h3>Download your results</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+                        <p>You can download your school examinations results anytime and anywhere. </p>
                     </a>
                 </div>
                 <!--Seciton 3-->
                 <div class="col-sm-4 service margin-30">
                     <a href="#">
                         <i class="fa fa-flag fa-4x light-gray"></i>
-                        <h3>Over 249 Schools</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+                        <h3>Over 50 Schools</h3>
+                        <p>Is your school here? we have over 50 secondary schools on our platform. More schools are coming</p>
                     </a>
                 </div>
             </div>
@@ -83,12 +83,12 @@
         <div class="container">
             <div class="row margin-40">
                 <div class="col-sm-12 text-center">
-                    <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut et dolore magna aliqua.</h2>
+                    <h2>ResultMasta<sup>TM</sup> is a platform provided by QuickNet Services Limited</h2>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-12 text-center">
-                    <a class="more" href="about.html"><i class="fa fa-chevron-circle-right fa-2x white"></i></a>
+                    <a class="more" href="#"><i class="fa fa-chevron-circle-right fa-2x white"></i></a>
                 </div>
             </div>
         </div>
