--- a/OnlineResultCheckPortal/Views/Shared/_LayoutHome.cshtml
+++ b/OnlineResultCheckPortal/Views/Shared/_LayoutHome.cshtml
@@ -61,9 +61,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="checker.html">Check Results</a></li>
-                    <li><a href="contact.php">Contact</a></li>
+                    <li class="active"><a href="/">Home</a></li>
+                    <li><a href="/Result">Check Results</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </div><!--/.navbar-collapse -->
         </div>
