updates to contact page and fresults page datatable fix

--- a/OnlineResultCheckPortal/Views/Shared/_LayoutHome.cshtml
+++ b/OnlineResultCheckPortal/Views/Shared/_LayoutHome.cshtml
@@ -11,7 +11,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="http://www.resultmasta.com">
     <meta property="og:site_name" content="Result Masta">
-    <meta property="og:description" content="ResultsMasta is a platfor for students to check their results online">
+    <meta property="og:description" content="ResultsMasta is a platform for students to check their results online">
     <!-- Styles -->
     <link rel="stylesheet" href="~/css/font-awesome.min.css">
     <link rel="stylesheet" href="~/css/animate.css">
@@ -57,13 +57,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand img-responsive" href="index.html"><img src="~/img/logo-1.png" alt="logo"></a>
+                <a class="navbar-brand img-responsive" href="/"><img src="~/img/logo-1.png" alt="logo"></a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active"><a href="/">Home</a></li>
                     <li><a href="/Result">Check Results</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="/Home/Contact">Contact</a></li>
                 </ul>
             </div><!--/.navbar-collapse -->
         </div>
