--- a/OnlineResultCheckPortal/Views/Home/Contact.cshtml
+++ b/OnlineResultCheckPortal/Views/Home/Contact.cshtml
@@ -1,50 +1,69 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "Contact Us";
+    Layout = "~/Views/Shared/_LayoutHome.cshtml";
 }
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-    <h2>@ViewBag.Message</h2>
-</hgroup>
-
-<section class="contact">
-    <header>
-        <h3>Phone</h3>
-    </header>
-    <p>
-        <span class="label">Main:</span>
-        <span>425.555.0100</span>
-    </p>
-    <p>
-        <span class="label">After Hours:</span>
-        <span>425.555.0199</span>
-    </p>
+<!--Content-->
+<section id="page-title" class="section">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 text-center">
+                <h3>Get In Touch</h3>
+            </div>
+        </div>
+    </div>
 </section>
 
-<section class="contact">
-    <header>
-        <h3>Email</h3>
-    </header>
-    <p>
-        <span class="label">Support:</span>
-        <span><a href="mailto:Support@example.com">Support@example.com</a></span>
-    </p>
-    <p>
-        <span class="label">Marketing:</span>
-        <span><a href="mailto:Marketing@example.com">Marketing@example.com</a></span>
-    </p>
-    <p>
-        <span class="label">General:</span>
-        <span><a href="mailto:General@example.com">General@example.com</a></span>
-    </p>
+<!--Content-->
+<section id="content2" class="section">
+    <div class="container">
+        <div class="row">
+
+            
+
+            <form method="POST">
+
+                <div class="col-sm-4">
+                    <div class="control-group">
+                        <div class="controls">
+                            <input type="text" name="contact_name" id="input1" placeholder="Your name">
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <div class="controls">
+                            <input type="text" name="contact_email" id="input2" placeholder="Your email address">
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <div class="controls">
+                            <input type="text" name="contact_subject" id="input3" placeholder="Subject">
+                        </div>
+                    </div>
+                </div><!--End Span4-->
+
+                <div class="col-sm-8">
+                    <div class="control-group">
+                        <div class="controls">
+                            <textarea name="contact_message" id="input4" rows="8" placeholder="The message you want to send to me."></textarea>
+                        </div>
+                    </div>
+                    <div class="text-right">
+                        <input type="hidden" name="save" value="contact">
+                        <button type="submit" class="btn-main">Submit</button>
+                    </div>
+                </div><!--End Span8-->
+            </form>
+
+
+        </div><!--End Row-->
+    </div><!--End Container-->
 </section>
 
-<section class="contact">
-    <header>
-        <h3>Address</h3>
-    </header>
-    <p>
-        One Microsoft Way<br />
-        Redmond, WA 98052-6399
-    </p>
+
+<!--Map Section-->
+<section id="map">
+
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3922.630206785309!2d7.4314688153244095!3d10.529764066576114!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x104d35548b7fcd8b%3A0xb78529270d48e0f0!2sMuhammadu+Buhari+Way%2C+Kaduna%2C+Nigeria!5e0!3m2!1sen!2s!4v1485300476444" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+
 </section>
+
