Full source code

--- a/OnlineResultCheckPortal/Content/ResultPortalStyleSheet.css
+++ b/OnlineResultCheckPortal/Content/ResultPortalStyleSheet.css
@@ -3,7 +3,7 @@
 
   .panel-heading {
         border-radius: 7px;
-        font-size:13px;
+        font-size:large;
         font-weight:bolder;
         padding-top: 15px;
         margin-top: 19px;
