--- a/OnlineResultCheckPortal/Views/AdministratorAddStudent/Index.cshtml
+++ b/OnlineResultCheckPortal/Views/AdministratorAddStudent/Index.cshtml
@@ -293,6 +293,7 @@
         .on('success.form.fv', function (e) {
             e.preventDefault();
             UpdatUserProfile('/AdministratorAddStudent/UpdateUserProfile/');
+            UserDetails();
         });
 
     });
