--- a/OnlineResultCheckPortal/Views/EndOfTermExaminations/Index.cshtml
+++ b/OnlineResultCheckPortal/Views/EndOfTermExaminations/Index.cshtml
@@ -388,7 +388,7 @@
     .on('success.form.fv', function (e) {
         e.preventDefault();
         InsertEndofTermMockExamResult('/EndOfTermExaminations/ResultUploadEndOfTermMockExam');
-
+        EndExaminationsDetails();
     });
 
     });
@@ -423,7 +423,7 @@
                                 // data: JSON.stringify(request),
                                 data: fileData,
                                 success: function (response) {
-                                  //  AlbumListDisplay();
+                                    //EndExaminationsDetails();
                                 },
                                 error: function (err) {
 
@@ -503,6 +503,7 @@
                     contentType: false,
                     processData: false,
                     success: function (d) {
+                        EndExaminationsDetails();
                         $("#lbladdMessages").show();
                         $('#lbladdMessages').html(d);
                         setTimeout(function () { $("#lbladdMessages").hide(); }, 10000);
