--- a/OnlineResultCheckPortal/Views/ManageSchool/Index.cshtml
+++ b/OnlineResultCheckPortal/Views/ManageSchool/Index.cshtml
@@ -162,6 +162,7 @@
     .on('success.form.fv', function (e) {
         e.preventDefault();
         AddSchool('/ManageSchool/AddSchool');
+        GetSchoolists();
     });
     
     });
