--- a/OnlineResultCheckPortal/Views/Token/Index.cshtml
+++ b/OnlineResultCheckPortal/Views/Token/Index.cshtml
@@ -59,7 +59,9 @@
                 <div class="modal-header" style="border-bottom: #edecec 1px solid;">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                     <h4 class="modal-title">Manage Token</h4>
-
+                    <h4 style="text-align:center;">
+                        <label class="label label-danger" id="lblMessages"></label>
+                    </h4>
                 </div>
                 <form id="TokenForm">
                     <div class="modal-body">
@@ -196,7 +198,7 @@
         .on('success.form.fv', function (e) {
             e.preventDefault();
             addnewRecorToken('/Token/AddTokens');
-
+            TokenDetails();
         });
     });
     $('#ClearTextbox').click(function () {
@@ -283,7 +285,7 @@
                     contentType: false,
                     processData: false,
                     success: function (d) {
-                       
+                        TokenDetails();
                         $("#lbladdMessages").show();
                         $('#lbladdMessages').html(d);
                         setTimeout(function () { $("#lbladdMessages").hide(); }, 10000);
