--- a/OnlineResultCheckPortal/Views/Shared/_LayoutHome.cshtml
+++ b/OnlineResultCheckPortal/Views/Shared/_LayoutHome.cshtml
@@ -57,11 +57,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand img-responsive" href="index.html"><img src="~/img/logo-1.png" alt="logo"></a>
+                <a class="navbar-brand img-responsive" href="/Home/Index"><img src="~/img/logo-1.png" alt="logo"></a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="Index">Home</a></li>
+                    <li class="active"><a href="/Home/Index">Home</a></li>
                     <li><a href="/Result/Index">Check Results</a></li>
                     <li><a href="/Home/Contact">Contact</a></li>
                 </ul>
